--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,8 @@
 .templatemacro:not(.whenRevealed) .form-group.stacked.command[data-type="whenRevealed"],
 .templatemacro:not(.whenEntered) .form-group.stacked.command[data-type="whenEntered"],
 .templatemacro:not(.whenLeft) .form-group.stacked.command[data-type="whenLeft"],
-.templatemacro:not(.whenCreated, .whenDeleted, .whenHidden, .whenRevealed, .whenEntered, .whenLeft) footer.sheet-footer.flexrow {
+.templatemacro:not(.whenStaying) .form-group.stacked.command[data-type="whenStaying"],
+.templatemacro:not(.whenCreated, .whenDeleted, .whenHidden, .whenRevealed, .whenEntered, .whenLeft, .whenStaying) footer.sheet-footer.flexrow {
   display: none;
 }
 
@@ -35,6 +36,7 @@
 .templatemacro.whenRevealed .triggers .trigger[data-type="whenRevealed"],
 .templatemacro.whenEntered .triggers .trigger[data-type="whenEntered"],
 .templatemacro.whenLeft .triggers .trigger[data-type="whenLeft"],
+.templatemacro.whenStaying .triggers .trigger[data-type="whenStaying"],
 .templatemacro .triggers .trigger:hover {
   text-shadow: 0 0 14px red;
 }
