--- a/templates/templatemacro.hbs
+++ b/templates/templatemacro.hbs
@@ -1,6 +1,6 @@
 <form class="editable flexcol" autocomplete="off">
   <header class="sheet-header">
-    <h1><input name="name" type="text" value="{{name}}" disabled></h1>
+    <h1><input type="text" value="{{name}}" disabled></h1>
   </header>
 
   <!-- navigation -->
